Introduces a csv.writer parameter
This param takes a write.csv or write.csv2 function in order to be
complient with some Excel setups that R supports.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,7 @@ Maintainer: Nikola Chochkov <nikola@adjust.com>
 Description: Facilitates maintaining CSV on gist.github.com directly from R objects
 License: MIT License
 Depends:
-    httr
+    httr,data.table
 Collate:
     'client.R'
+RoxygenNote: 6.0.1
